# internal/api/router.go
@@ -52,21 +52,21 @@ func NewRouter(st *store.Store, cfg config.Config, ui fs.FS, nc *netctl.Controll
 			r.Get("/settings/system", h.GetSystemSettings)
 			r.Put("/settings/system", h.PutSystemSettings)
 
-			r.Get("/peers", h.ListPeers)
-			r.Post("/peers", h.CreatePeer)
-			r.Get("/peers/{id}", h.GetPeer)
-			r.Patch("/peers/{id}", h.PatchPeer)
-			r.Delete("/peers/{id}", h.DeletePeer)
-			r.Get("/peers/{id}/config", h.PeerConfig)
-			r.Get("/peers/{id}/qrcode", h.PeerQR)
-			r.Post("/peers/{id}/enable", h.EnablePeer)
-			r.Post("/peers/{id}/disable", h.DisablePeer)
+			r.Get("/clients", h.ListClients)
+			r.Post("/clients", h.CreateClient)
+			r.Get("/clients/{id}", h.GetClient)
+			r.Patch("/clients/{id}", h.PatchClient)
+			r.Delete("/clients/{id}", h.DeleteClient)
+			r.Get("/clients/{id}/config", h.ClientConfig)
+			r.Get("/clients/{id}/qrcode", h.ClientQR)
+			r.Post("/clients/{id}/enable", h.EnableClient)
+			r.Post("/clients/{id}/disable", h.DisableClient)
 
-			r.Get("/egress-tunnels", h.ListEgressTunnels)
-			r.Post("/egress-tunnels", h.CreateEgressTunnel)
-			r.Get("/egress-tunnels/{id}", h.GetEgressTunnel)
-			r.Patch("/egress-tunnels/{id}", h.PatchEgressTunnel)
-			r.Delete("/egress-tunnels/{id}", h.DeleteEgressTunnel)
+			r.Get("/upstreams", h.ListUpstreams)
+			r.Post("/upstreams", h.CreateUpstream)
+			r.Get("/upstreams/{id}", h.GetUpstream)
+			r.Patch("/upstreams/{id}", h.PatchUpstream)
+			r.Delete("/upstreams/{id}", h.DeleteUpstream)
 
 			r.Post("/system/apply", h.SystemApply)
 			r.Get("/system/status", h.SystemStatus)
